package com.example.c195;

/**
 * A simple extension of the User data class for Admin user types
 */
public class Admin extends User {

    public Admin(String name, int id) {
        super(name, id);
    }
}
